<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20"
                android:layout_centerVertical="true"
                />


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bz_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/margin_50"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bz_note_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bz_note"
            android:gravity="center"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/black"
            android:textStyle="bold"

            android:shadowColor="@color/purple_500"
            android:shadowRadius="3"
            android:shadowDx="1"
            android:shadowDy="1"
            />


    </LinearLayout>


    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/bz_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bz_linear"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_10"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/bz_note_des"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_15"
        android:typeface="sans"


        tools:targetApi="o" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/width_350"
        android:layout_height="@dimen/height_150"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/radius_20"
        app:cardElevation="@dimen/elevation_10"
        app:cardMaxElevation="@dimen/max_elevation_12"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_10"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_baseline_email"
                tools:ignore="VectorDrawableCompat" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_10"
                android:layout_toEndOf="@+id/img_email"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_facebook"
                tools:ignore="VectorDrawableCompat"


                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
               android:layout_margin="@dimen/margin_10"
                android:layout_toEndOf="@+id/img_facebook"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_twitter"
                tools:ignore="VectorDrawableCompat" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_linkein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_5"
                android:layout_toEndOf="@+id/img_twitter"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_linkedin"
                tools:ignore="VectorDrawableCompat" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>








</RelativeLayout>